# nsr-engine

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  LICENSE  MODEL_LICENSES.md  NOTICE.md  README.md  SECURITY.md  THIRD_PARTY_LICENSES.md  pyproject.toml
.github/workflows/: tests.yml
docs/: ARCHITECTURE.md  VALIDATION_SUMMARY.md
scripts/: fetch_models.py  generate_contract_fingerprint.py  print_model_contracts.py
src/nsr_engine/: __init__.py  __main__.py  config.py  engine.py  rgl.py  scheduler.py
src/nsr_engine/capture/: webcam.py
src/nsr_engine/contract/: fingerprint.py  guard.py
src/nsr_engine/face/: appearance_encoder.py  cropper.py  detector.py  motion_extractor.py  onnx_util.py
src/nsr_engine/motion/: keypoint_transform.py  latent_flow.py
src/nsr_engine/onnx/: __init__.py  resolver.py
src/nsr_engine/output/: window.py
src/nsr_engine/render/: io.py  neural_stitcher.py  spade_generator.py
src/nsr_engine/util/: __init__.py  determinism.py  latents.py  onnx_compat.py  pacer.py  typing.py
tests/: conftest.py  test_async_slot.py  test_contract_fingerprint.py  test_contracts.py  test_face_crop.py  test_face_detector_mediapipe.py  test_identity_preservation.py  test_keypoint_transform.py  test_micro_expression.py  test_no_inference_stubs.py  test_no_legacy_deps.py  test_onnx_resolver.py  test_onnx_runtime_profiling.py  test_profiling_pipeline.py  test_rgl.py  test_scheduler.py  test_temporal_stability.py
tests/_profiling/: diagnostics.py  profiler.py
